# eyeq

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml
cmake/: BuildSpdlog.cmake  FindFFmpeg.cmake  FindLibplacebo.cmake  git_archive.sh
docs/: INSTALL.md  INSTALL_zh.md  README_zh.md
memory/: libplacebo_texture_format.md
scripts/: eyeq.desktop  format.sh  package-linux.sh  package-macos.sh  package-windows.sh
src/: libav_impl.c  log.cpp  log.hpp  main.cpp  save_frame.cpp  sync_player.cpp  sync_player.hpp  utils.hpp  version.h.in  video_source.cpp  video_source.hpp
src/display/: fill_render.cpp  fill_render.hpp  grid_render.cpp  grid_render.hpp  osd.cpp  osd.hpp  platform_activate.h  platform_activate_mac.mm  platform_activate_stub.cpp  platform_icc.h  platform_icc_mac.mm  platform_icc_stub.cpp  render.cpp  render.hpp  slide_render.cpp  slide_render.hpp  video_frame.cpp  video_frame.hpp  vulkan_exts.cpp  window.cpp  window.hpp
